Fixed background color bug on mobile for qui.html

--- a/css/custom.css
+++ b/css/custom.css
@@ -72,12 +72,11 @@ html, body {
 }
 
 .fallingBills {
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 	z-index: -1;
 }
 .fallingBills span {
